# otx_mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.json
src/: formatting.rs  indicator.rs  main.rs  otx_client.rs  tools.rs
tests/: mcp_transport.rs
